# multi-agent-travel-concierge

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-autogen.txt  requirements-crewai.txt  requirements-langgraph.txt  requirements-llama-index.txt  requirements.txt
.github/workflows/: tests.yml
src/: __init__.py  app.py
src/agents/autogen/: travel_assistant.py
src/agents/llama-index/: README.md
src/frontend/: app.py
src/tools/: booking.py  rapidapi_attractions_search.py  rapidapi_flightsearch_detailed.py  rapidapi_flightssearch.py  rapidapi_hotel_search_tool.py  visual_analyzer.py
