[tool.poetry]
name = "src"
version = "0.0.1"
description = "Multi-agent Travel Concierge Task"
authors = ["Charlene Leong <charleneleong84@gmail.com>"]
package-mode = true
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

## Models
## transformers = "^4.44.2" # https://github.com/huggingface/transformers/releases
## scikit-learn = "^1.5.1" # https://github.com/scikit-learn/scikit-learn/releases

## Data
pandas = "^2.2.0" # https://pandas.pydata.org/docs/whatsnew/index.html
numpy = "^1.24.0" # https://github.com/numpy/numpy/releases

## Logging and config
loguru = "^0.7.2 " # https://github.com/Delgan/loguru/releases
typer = "^0.12.3" # https://github.com/tiangolo/typer/releases
# hydra-core = "^1.3.2" # https://github.com/facebookresearch/hydra/releases
python-dotenv = "^1.0.1" # https://github.com/theskumar/python-dotenv/releases
colorama = "^0.4.6" # https://github.com/tartley/colorama/blob/master/CHANGELOG.rst

[tool.poetry.group.data.dependencies]
## Data and visualisation
matplotlib = "^3.8.4" # https://matplotlib.org/stable/users/release_notes.html
## ray = "^2.10.0" # https://github.com/ray-project/ray/releases


## Tests dependencies
[tool.poetry.group.tests.dependencies]
pytest = "^8.3.2" # https://github.com/pytest-dev/pytest/releases/
pytest-cov = "^5.0.0" # https://github.com/pytest-dev/pytest-cov/tags

## Dev dependencies
[tool.poetry.dev-dependencies]
jupyterlab = "^4.1.6" # https://github.com/jupyterlab/jupyterlab/releases/
ipdb = "^0.13.13" # https://pypi.org/project/ipdb/
ruff = "^0.3.1" # https://github.com/astral-sh/ruff/releases
nbqa = "^1.8.3" # https://github.com/nbQA-dev/nbQA/blob/main/docs/history.rst
## nvitop = "^1.3.2" # https://github.com/XuehaiPan/nvitop/releases
pre-commit = "^3.7.0" # https://github.com/pre-commit/pre-commit/releases/


## LLMs and Agents Deps

## Llamaindex dependencies
[tool.poetry.group.llama-index.dependencies]
llama-index-core = "^0.11.19"
llama-index-llms-openai = "^0.2.0"
llama-index-llms-anthropic = "^0.3.0"
llama-index-agent-openai = "^0.3.0"
llama-index-utils-workflow = "^0.2.2"

## Langchain/Langgraph dependencies
[tool.poetry.group.langgraph.dependencies]
langchain = "^0.3.1"
langchain-anthropic = "^0.2.3"
langchain-chroma = "^0.1.4"
langchain-community = "^0.3.3"
langchain-core = "^0.3.12"
langchain-openai = "^0.2.3"
langchain-text-splitters = "^0.3.0"
langchainhub = "^0.1.20"
langdetect = "^1.0.9"
langgraph = "^0.2.39"
openai = "^1.52.2"

## Crewai dependencies
[tool.poetry.group.crewai.dependencies]
crewai = "^0.76.2" # https://github.com/crewAIInc/crewAI/releases
crewai-tools = "^0.13.2"

## Autogen dependencies
[tool.poetry.group.autogen.dependencies]
autogen = "^0.3.1" # https://github.com/autogenhub/autogen/releases

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ['src']
omit = ["*/__init__.py"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-svv --cov=src"
